chore: fixed some null cases & warnings